[gd_scene load_steps=17 format=2]

[ext_resource path="res://Dark Forest Tileset/Skullwolf/Massacre Sprite Sheet.png" type="Texture" id=1]
[ext_resource path="res://Scripts/skulwolf.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 64, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 128, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 192, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 256, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 320, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "attack",
"speed": 5.0
}, {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "stand",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 49, 10 )

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 25.5, 7.5 )

[node name="skulwolf" type="Area2D"]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 12 )
animation = "stand"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -24, 19 )
shape = SubResource( 13 )

[node name="attack_trigger" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="attack_trigger"]
position = Vector2( -1.5, 20.5 )
shape = SubResource( 14 )

[connection signal="body_entered" from="." to="." method="_on_skulwolf_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_skulwolf_body_exited"]
[connection signal="body_entered" from="attack_trigger" to="." method="_on_attack_trigger_body_entered"]
[connection signal="body_exited" from="attack_trigger" to="." method="_on_attack_trigger_body_exited"]
